Fix ios flex wrap

--- a/src/sass/2-layout/_layout.scss
+++ b/src/sass/2-layout/_layout.scss
@@ -15,6 +15,8 @@ body {
 
 main {
   overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
 .details main {
